--- a/app/src/main/res/layout/book_details_row.xml
+++ b/app/src/main/res/layout/book_details_row.xml
@@ -11,15 +11,14 @@
         tools:layout_editor_absoluteY="311dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Title"
+        android:text="@string/Title"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/titleInfo"
         style="@android:style/TextAppearance.Medium"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/author"
@@ -27,15 +26,14 @@
         tools:layout_editor_absoluteY="311dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Author"
+        android:text="@string/Author"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/authorInfo"
         style="@android:style/TextAppearance.Medium"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/isbn"
@@ -43,15 +41,14 @@
         tools:layout_editor_absoluteY="311dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ISBN"
+        android:text="@string/ISBN"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/isbnInfo"
         style="@android:style/TextAppearance.Medium"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/price"
@@ -59,15 +56,32 @@
         tools:layout_editor_absoluteY="311dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Price"
+        android:text="@string/Price"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/priceInfo"
         style="@android:style/TextAppearance.Medium"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/intro"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="311dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="@string/Intro"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/introInfo"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Lorem ipsum dolor sit amet,
+        etiam convallis morbi arcu eget blanditiis vel,
+        sagittis odio vivamus nulla at tristique."/>
 
 
 </LinearLayout>
